--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}RAC Energry Central Server{% endblock %}
 
 {% block content %}
   <h2>Login</h2>
