--- a/templates/index.html
+++ b/templates/index.html
@@ -31,8 +31,9 @@
 </div>
 
 <div class="container">
-    <div class="row justify-content-center"> 
-        <div class="col-sm-6 ">
+    <div class="row justify-content-center jumbotron"> 
+      <h3 class="align-center"> No of Students Born in Corresponding Years</h3>
+        <div class="col-sm-8 ">
             <canvas id="myChart" width="250" height="250">
                 <script>
                     $(document).ready(function(){
@@ -43,7 +44,8 @@
         </div>
     </div>
     <br>
-    <div class="row "> 
+    <div class="row jumbotron"> 
+      <h3 class="col-sm-12 "> Gender Related Statistics</h3>
       <div class="col-sm-4 ">
           <canvas id="genderPercentage" width="250" height="250">
               <script>
@@ -67,7 +69,8 @@
 
     <br>
     <br>
-    <div class="row "> 
+    <div class="row jumbotron"> 
+      <div class="col-sm-12 "><h3 class="align-center"> Ailments in Gender</h3></div>
       <div class="col-sm-4 ">
           <canvas id="ailmentData" width="250" height="250">
               <script>
