--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 {% block title %}RAC Energry Central Server{% endblock %}
 
 {% block content %}
-  <h2>Login</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-  </form>
+<div class="row justify-content-center">
+  <div class="col-8">
+    <h2>Login</h2>
+    <form method="post">
+      {% csrf_token %}
+      {{ form|crispy  }}
+      <button type="submit">Login</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
